<resources>
    <string name="app_name">Four Column Kanban</string>
    <string name="to_do">To Do</string>
    <string name="dev">In Development</string>
    <string name="test">Testing</string>
    <string name="done">Done</string>
    <string name="addTask">New Task</string>
    <string name="title">Title :</string>
    <string name="desc">Description :</string>
    <string name="save">Save</string>
    <string name="cancel">Back</string>
    <string name="edit">Edit Task</string>
    <string name="delete">Delete Task</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
